--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <th>movie</th>
         </tr>
         <tr>
-            <td>2018</td>
-            <td>The shape of water</td>
+            <td>REMOVE</td>
+            <td>REMOVE</td>
         </tr>
         <tr>
             <td>1982</td>
