--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
         </tr>
     </table>
 </body>
+<footer>Nobody is responsible if you don't like the movies in this website!</footer>
 
 </html>
