I removed all the films, sorry

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <td>REMOVE</td>
         </tr>
         <tr>
-            <td>1982</td>
-            <td>E.T.</td>
+            <td>HACKED/td>
+            <td>HACKED</td>
         </tr>
     </table>
 </body>
