--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <td>E.T.</td>
         </tr>
     </table>
+    <footer>Nobody is responsible if you do not like the movies on this website.</footer>
 </body>
 
 </html>
