--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meraki-movies</title>
-    <meta name="description" content="Horror,Romance,Comedy,Action">
+    <meta name="description" content="Find the latest new movies now playing in theaters. Find showtimes, watch trailers, and read reviews & ratings all on Meraki.">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
