updated per request

--- a/index.html
+++ b/index.html
@@ -18,11 +18,39 @@
         </tr>
         <tr>
             <td>2018</td>
-            <td>The shape of water</td>
+            <td>Bohemian Rhapsody</td>
         </tr>
         <tr>
-            <td>1982</td>
-            <td>E.T.</td>
+            <td>2018</td>
+            <td>Halloween (I)</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>A Star Is Born</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Suspiria</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Venom</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>The Nutcracker and the Four Realms</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Alpha</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>First Man</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>The Nun</td>
         </tr>
     </table>
 </body>
