--- a/index.html
+++ b/index.html
@@ -24,6 +24,26 @@
             <td>1982</td>
             <td>E.T.</td>
         </tr>
+        <tr>
+            <td>1990</td>
+            <td>Goodfellas</td>
+        </tr>
+        <tr>
+            <td>1995</td>
+            <td>Casino</td>
+        </tr>
+        <tr>
+            <td>2004</td>
+            <td>Aviator</td>
+        </tr>
+        <tr>
+            <td>2006</td>
+            <td>Departed</td>
+        </tr>
+        <tr>
+            <td>2010</td>
+            <td>Shutter Island</td>
+        </tr>
     </table>
 </body>
 
