--- a/index.html
+++ b/index.html
@@ -17,12 +17,40 @@
             <th>movie</th>
         </tr>
         <tr>
-            <td>REMOVE</td>
-            <td>REMOVE</td>
+            <td>2018</td>
+            <td>Bohemian Rhapsody</td>
         </tr>
         <tr>
-            <td>HACKED/td>
-            <td>HACKED</td>
+            <td>2018</td>
+            <td>Halloween (I)</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>A Star Is Born</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Suspiria</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Venom</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>The Nutcracker and the Four Realms</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>Alpha</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>First Man</td>
+        </tr>
+        <tr>
+            <td>2018</td>
+            <td>The Nun</td>
         </tr>
     </table>
     <footer>Nobody is responsible if you do not like the movies on this website.</footer>
