--- a/index.html
+++ b/index.html
@@ -52,6 +52,26 @@
             <td>2018</td>
             <td>The Nun</td>
         </tr>
+        <tr>
+            <td>1990</td>
+            <td>Goodfellas</td>
+        </tr>
+        <tr>
+            <td>1995</td>
+            <td>Casino</td>
+        </tr>
+        <tr>
+            <td>2004</td>
+            <td>Aviator</td>
+        </tr>
+        <tr>
+            <td>2006</td>
+            <td>Departed</td>
+        </tr>
+        <tr>
+            <td>2010</td>
+            <td>Shutter Island</td>
+        </tr>
     </table>
     <footer>Nobody is responsible if you do not like the movies on this website.</footer>
 </body>
