changed the linking of the css file in the index.html

--- a/index.html
+++ b/index.html
@@ -1,80 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Meraki-movies</title>
-    <meta name="description" content="Find the latest new movies now playing in theaters. Find showtimes, watch trailers, and read reviews & ratings all on Meraki.">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <meta
+      name="description"
+      content="Find the latest new movies now playing in theaters. Find showtimes, watch trailers, and read reviews & ratings all on Meraki."
+    />
+    <link rel="stylesheet" href="./build/style.css" />
+  </head>
 
-<body>
+  <body>
     <h1>Meraki movies</h1>
     <table>
-        <tr>
-            <th>year</th>
-            <th>movie</th>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Bohemian Rhapsody</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Halloween (I)</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>A Star Is Born</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Suspiria</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Venom</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>The Nutcracker and the Four Realms</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>Alpha</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>First Man</td>
-        </tr>
-        <tr>
-            <td>2018</td>
-            <td>The Nun</td>
-        </tr>
-        <tr>
-            <td>1990</td>
-            <td>Goodfellas</td>
-        </tr>
-        <tr>
-            <td>1995</td>
-            <td>Casino</td>
-        </tr>
-        <tr>
-            <td>2004</td>
-            <td>Aviator</td>
-        </tr>
-        <tr>
-            <td>2006</td>
-            <td>Departed</td>
-        </tr>
-        <tr>
-            <td>2010</td>
-            <td>Shutter Island</td>
-        </tr>
+      <tr>
+        <th>year</th>
+        <th>movie</th>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Bohemian Rhapsody</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Halloween (I)</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>A Star Is Born</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Suspiria</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Venom</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>The Nutcracker and the Four Realms</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Alpha</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>First Man</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>The Nun</td>
+      </tr>
+      <tr>
+        <td>1990</td>
+        <td>Goodfellas</td>
+      </tr>
+      <tr>
+        <td>1995</td>
+        <td>Casino</td>
+      </tr>
+      <tr>
+        <td>2004</td>
+        <td>Aviator</td>
+      </tr>
+      <tr>
+        <td>2006</td>
+        <td>Departed</td>
+      </tr>
+      <tr>
+        <td>2010</td>
+        <td>Shutter Island</td>
+      </tr>
     </table>
-    <footer>Nobody is responsible if you do not like the movies on this website.</footer>
-</body>
 
+    <footer>
+      Nobody is responsible if you do not like the movies on this website.
+    </footer>
+  </body>
 </html>
