--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meraki-movies</title>
-    <meta name="description" content="Meraki-movies is a social network for sharing your taste in film. Use it as a diary to record your opinion about films as you watch them, or just to keep track of films">
+    <meta name="description" content="Meraki movies is a social network for sharing your taste in film. Use it as a diary to record your opinion about films as you watch them, or just to keep track of films">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
