--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Find the latest new movies now playing in theaters. Find showtimes, watch trailers, and read reviews & ratings all on Meraki."
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./build/style.css" />
   </head>
 
   <body>
