I removed an old movie

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <body>
     <h1>Meraki movies</h1>
+    <a href="http://www.imdb.com">Link to Imdb</a>
     <table>
       <tr>
         <th>year</th>
@@ -56,14 +57,6 @@
         <td>The Nun</td>
       </tr>
       <tr>
-        <td>1990</td>
-        <td>Goodfellas</td>
-      </tr>
-      <tr>
-        <td>1995</td>
-        <td>Casino</td>
-      </tr>
-      <tr>
         <td>2004</td>
         <td>Aviator</td>
       </tr>
@@ -75,14 +68,10 @@
         <td>2010</td>
         <td>Shutter Island</td>
       </tr>
-      <tr>
-        <td>2018</td>
-        <td>Kursk</td>
-      </tr>
     </table>
 
     <footer>
-      Nobody is responsible if you do not like the movies on this website.
+      We are not responsible if you watch movies that you did not like. :-)
     </footer>
   </body>
 </html>
