added two movies

--- a/index.html
+++ b/index.html
@@ -76,8 +76,14 @@
         <td>2010</td>
         <td>Shutter Island</td>
       </tr>
-    </table>
-
+      <tr>
+        <td>2018</td>
+        <td>Incredibles 2</td>
+      </tr>
+      <tr>
+        <td>2018</td>
+        <td>Aquaman</td>
+      </tr>
     <footer>
       We are not responsible if you watch movies that you did not like. :-)
     </footer>
