I added a good movie from 2002: Gangs of New York

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
         <td>The Nutcracker and the Four Realms</td>
       </tr>
       <tr>
+        <td>2002</td>
+        <td>Gangs of New York</td>
+      </tr>
+      <tr>
         <td>2018</td>
         <td>Alpha</td>
       </tr>
