added the table tag

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <td>2018</td>
         <td>Aquaman</td>
       </tr>
+    </table>
+
     <footer>
       We are not responsible if you watch movies that you did not like. :-)
     </footer>
