I added a great movie for children

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Meraki-movies</title>
-    <meta name="description" content="Meraki movies is a social network for sharing your taste in film. Use it as a diary to record your opinion about films as you watch them, or just to keep track of films">
+    <meta
+      name="description"
+      content="Meraki movies is a social network for sharing your taste in film. Use it as a diary to record your opinion about films as you watch them, or just to keep track of films"
+    />
     <link rel="stylesheet" href="./build/style.css" />
   </head>
 
@@ -36,6 +39,10 @@
       <tr>
         <td>2018</td>
         <td>Venom</td>
+      </tr>
+      <tr>
+        <td>1999</td>
+        <td>Toy Story 2</td>
       </tr>
       <tr>
         <td>2018</td>
