I added a good action movie from 1993

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         <td>The Nutcracker and the Four Realms</td>
       </tr>
       <tr>
+        <td>1993</td>
+        <td>The Fugitive</td>
+      </tr>
+      <tr>
         <td>2018</td>
         <td>Alpha</td>
       </tr>
