--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Meraki-movies</title>
     <meta
       name="description"
-      content="Meraki movies is a social network for sharing your taste in film. Use it as a diary to record your opinion about films as you watch them, or just to keep track of films"
+      content="Watch Netflix movies & TV shows online or stream right to your smart TV, game console, PC, Mac, mobile, tablet and more."
     />
     <link rel="stylesheet" href="./build/style.css" />
   </head>
