--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
         <td>2006</td>
         <td>Departed</td>
       </tr>
+    </table>
+
     <footer>
       We are not responsible if you watch movies that you did not like. :-)
     </footer>
