--- a/theorie.html
+++ b/theorie.html
@@ -33,11 +33,11 @@
       }
 
       p:nth-child(2) {
-        background-color: yellow;
+        background-color: gray;
       }
 
       p:nth-child(3) {
-        background-color: red;
+        background-color: lightblue;
       }
     </style>
   </head>
